# ai_embedding_platform

./: .gitignore  Makefile  README.md  pyproject.toml
.data/: e2e-task-orchestrator.db  e2e-vector-store.db  vector-store.db
ai_embedding_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
configs/dev/: README.md
configs/prod/: README.md
configs/stage/: README.md
deploy/docker-compose/: README.md  local-brokers.yml
deploy/helm/: README.md
deploy/kubernetes/base/: README.md
deploy/terraform/: README.md
docs/: embedding_platform_architecture.md
docs/api/: error_codes.md  event_model.md
docs/api/openapi/: embedding-platform.openapi.yaml
docs/architecture/: 00_platform_overview.md  01_industrial_capability_baseline.md  02_repository_layout.md  03_service_boundaries.md  04_implementation_roadmap.md  05_phase0_phase1_delivery_plan.md  06_task_state_machine.md  07_mvp_scaffold.md  08_queue_backend_spec.md
docs/runbooks/: redis_stream_local_smoke.md  sre_baseline.md
docs/security/: security_baseline.md
scripts/: README.md
scripts/local/: run_embedding_runtime.sh  run_gateway.sh  run_preprocess.sh  run_retrieval.sh  run_task_orchestrator.sh  run_task_orchestrator_kafka.sh  run_task_orchestrator_redis.sh  run_vector_store_proxy.sh  smoke_kafka_topics.sh  smoke_queue_stats.sh  smoke_redis_streams.sh  smoke_redis_task_flow.sh
services/control-plane/cost-quota/: README.md
services/gateway/: README.md
tests/contract/: README.md
tests/integration/: README.md
tests/performance/: README.md
(+90 files in other folders)
