[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-embedding-platform"
version = "0.1.0"
description = "MVP service scaffold for the AI Embedding Platform."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
embedding-gateway = "embedding_gateway.app:main"
embedding-task-orchestrator = "embedding_task_orchestrator.app:main"
embedding-runtime = "embedding_runtime_service.app:main"
embedding-vector-store-proxy = "embedding_vector_store_proxy.app:main"
embedding-retrieval = "embedding_retrieval_service.app:main"
embedding-preprocess = "embedding_preprocess_service.app:main"

[tool.setuptools.packages.find]
where = [
  "packages/common/src",
  "services/gateway/src",
  "services/control-plane/task-orchestrator/src",
  "services/data-plane/embedding-runtime/src",
  "services/data-plane/preprocess/src",
  "services/data-plane/vector-store-proxy/src",
  "services/data-plane/retrieval/src",
]
